# vllm-kubernetes-plugin

./: .gitignore  BUILD.md  INSTALL.md  LICENSE  README.md  build.sh  build_with_config.py  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements-test.txt  requirements.txt  setup.py
docker/: Dockerfile
examples/: serve_with_log_request_response_v0.sh  serve_with_log_request_response_v1.sh  serve_with_logger.sh  serve_with_trace_id.sh
scripts/: generate_config.py  generate_package_scanned_info.py  test_find_loggers.py  test_find_methods.py  utils.py
src/vllm_kubernetes_plugin/: __init__.py  kv_cache_event.py  log_request_response.py  middleware.py  trace.py  utils.py
src/vllm_kubernetes_plugin/common/: logger_plugin.py  trace_plugin.py
src/vllm_kubernetes_plugin/config/: __init__.py  protocol.py  vllm_scanned_info.py
src/vllm_kubernetes_plugin/package_scanned_info/: __init__.py  lmcache__v0_3_1_post1.py  lmcache__v0_3_2.py  lmcache__vunknown.py  vllm__v0_10_0.py  vllm__v0_10_1___gptoss.py  vllm__v0_10_1_dev1___gbcc0a3cbe.py  vllm__v0_7_2.py  vllm__v0_7_3.py  vllm__v0_8_5_post1.py  vllm__v0_8_5_post1___das_opt4_dtk25041.py  vllm__v0_9_0.py  vllm__v0_9_0_1.py  vllm__v0_9_1.py  vllm__v0_9_2.py  vllm__v0_9_2___das_opt1_alpha_dtk25041.py
tests/: test_build_system.py  test_logger_plugin.py
