[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]


[tool.poetry]
packages = [
    { include = "vllm_kubernetes_plugin", from = "src" }
]


[project]
name = "vllm-kubernetes-plugin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "vllm>=0.5.5",
    "pynvml>=12.0.0",
]

[project.entry-points."vllm.general_plugins"]
vllm_kubernetes_plugin = "vllm_kubernetes_plugin:register"


[tool.ruff]
line-length = 88
indent-width = 4
exclude = ["build", "dist", "env", ".venv"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
ignore = [
    "PLR0913",
    "TC001",
    "COM812",
    "ISC001",
    "TC002",
    "PLW1514", # allow Path.open without encoding
    "RET505", # allow `else` blocks
    "RET506", # allow `else` blocks
    "PD011", # ignore .values usage since ruff assumes it's a Pandas DataFrame
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"